test/files/neg/t3115.scala
object sc {
  @deprecated("", "2.8.0") object Math
}

object Test {
  println(sc.Math)
  println(scala.Math)
  scala.Math.Pi
}
